# final-year-project

./: GROUND WATER LEVEL PREDICTION USING MACHINE LEARNING.docx  PIP2001 Review-1 PPT Ground Water Level Predictor (1).pptx  Review-1_Report_Template[2][1]mentor (1).docx  Under Level Water predicator Research.docx  app.py  data_interpolation.py  data_processor.py  ml_models.py  pyproject.toml  requirements.txt  review_0_pptxCBD_G-11 (1).pptx  review_0_pptxCBD_G-11 (2).pptx  spatial_analysis.py  temporal_analysis.py  visualization.py
