[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "folium>=0.19.5",
    "statsmodels>=0.14.4",
    "joblib>=1.4.2",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "branca>=0.8.1",
    "tensorflow>=2.14.0",
    "geopandas>=1.0.1",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
]
